added order confirmation and messsage confirmation

--- a/csce242/projects/part3/contact.html
+++ b/csce242/projects/part3/contact.html
@@ -48,7 +48,9 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
 
+                <a href="received.html">
                 <button type="submit">Send</button>
+                </a>
                 <button type="reset">Cancel</button>
             </form>
         </section>
