--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -20,11 +20,19 @@
         <h1>Gaming Overload</h1>
     </header>
     
-    <main>
+        <nav class="secondary-nav">
+            <ul>
+                <li><a href="index.html">Highlights</a></li>
+                <li><a href="#">Promotions</a></li>
+                <li><a href="#">Latest-arrivals</a></li>
+            </ul>
+        </nav>
+        <main>
         <section class="highlights">
-            <h2>Highlights</h2>
             <div class="grid-container">
+                <a href="highlight.html">
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Game of the Month"><p>Game of the Month</p></div>
+                </a>
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Top-Selling Games"><p>Top-Selling Games</p></div>
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Upcoming Releases"><p>Upcoming Releases</p></div>
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Exclusive Editions"><p>Exclusive Editions</p></div>
@@ -33,13 +41,6 @@
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Game Updates & Patches"><p>Game Updates & Patches</p></div>
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Must Have Accessories"><p>Must Have Accessories</p></div>
             </div>
-        </section>
-        <section class="promotions">
-            <h2>Promotions</h2>
-        </section>
-
-        <section class="latest-arrivals">
-            <h2>Latest Arrivals</h2>
         </section>
     </main>
 </body>
