edited contact page and review page

--- a/csce242/projects/part3/dashboard.html
+++ b/csce242/projects/part3/dashboard.html
@@ -52,7 +52,9 @@
             <h2>User Profile</h2>
             <img src="https://place-hold.it/200x200/ddd" alt="User Profile">
             <p>Here are the detailed information of the user.</p>
+            <a href="settings.html">
             <button class="edit-btn">Edit</button>
+            </a>
             <button class="delete-btn">Delete</button>
         </section>
         
