--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -30,7 +30,7 @@
         <main>
         <section class="highlights">
             <div class="grid-container">
-                <a href="highlight.html">
+                <a href="highlights.html">
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Game of the Month"><p>Game of the Month</p></div>
                 </a>
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Top-Selling Games"><p>Top-Selling Games</p></div>
