--- a/csce242/projects/part3/shop.html
+++ b/csce242/projects/part3/shop.html
@@ -18,7 +18,7 @@
 
     <main class="shop-container">
         <input type="text" class="search-box" placeholder="Search for games...">
-        
+
         <nav class="secondary-nav">
             <ul>
                 <li><a href="shop.html">Games</a></li>
@@ -79,6 +79,38 @@
                 <p><strong>Casino</strong></p>
                 <p>Gamble</p>
                 <p>Make lots of money</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+
+            <div class="game-item">
+                <img src="https://place-hold.it/150x150/ddd" alt="Game">
+                <p><strong>Sims</strong></p>
+                <p>An open world action</p>
+                <p>Live your dreams</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+
+            <div class="game-item">
+                <img src="https://place-hold.it/150x150/ddd" alt="Game">
+                <p><strong>Nascar</strong></p>
+                <p>An open world action</p>
+                <p>Become a racing champion</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+
+            <div class="game-item">
+                <img src="https://place-hold.it/150x150/ddd" alt="Game">
+                <p><strong>Minecraft</strong></p>
+                <p>Creative sandbox</p>
+                <p>Build your own world</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+
+            <div class="game-item">
+                <img src="https://place-hold.it/150x150/ddd" alt="Game">
+                <p><strong>Fortnite</strong></p>
+                <p>Action pack</p>
+                <p>Join your friends in action</p>
                 <button class="buy-btn">Buy Now</button>
             </div>
             
