--- a/csce242/index.html
+++ b/csce242/index.html
@@ -33,6 +33,14 @@
           </div>
         </section>
 
+        <div class="assignment">
+          <a href="https://durantchristian.github.io/csce242/assignments/assignment07/index.html">
+          <h3>Assignment 7 - Intro to Java Script</h3>
+            <img src="images/assignment07SS.png" alt="Assignment 7 Preview">
+        </a>
+        </div>
+      </section>
+
         <h2 id="projects-heading">Projects</h2>
         <section class="projects">
           <div class="project">
@@ -46,6 +54,13 @@
             <a href="https://durantchristian.github.io/csce242/projects/part2/index.html">
             <h3>Project 1 part 2 - Wireframe</h3>
               <img src="images/wireframe.png" alt="Project part 2 Preview">
+          </a>
+          </div>
+
+          <div class="project">
+            <a href="https://durantchristian.github.io/csce242/projects/part3/index.html">
+            <h3>Project 1 part 3 - Projects Website</h3>
+              <img src="images/projectpart3SS.png" alt="Project part 3 Preview">
           </a>
           </div>
           
