--- a/csce242/projects/part3/shop.html
+++ b/csce242/projects/part3/shop.html
@@ -31,7 +31,7 @@
         <img src="https://place-hold.it/300x300/ddd" alt="Featured Game" class="featured-img">
         
         <h2>Hot Games</h2>
-        <div class="grid-container">
+        <div class="games-grid">
             <div class="game-item">
                 <img src="https://place-hold.it/150x150/ddd" alt="Game">
                 <p><strong>The Witcher 3</strong></p>
