--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="toggle-nav">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <ul class="columns hide-small">
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
