--- a/csce242/04_js_intro/index.html
+++ b/csce242/04_js_intro/index.html
@@ -128,6 +128,12 @@
                             <p>Hi Portia</p>
                         </section>
                     </section>
+                    <section>
+                        <p>
+                            <label for="textbox">Enter color:</label>
+                            <input type="text" id="textbox" name="textbox">
+                        </p>
+                    </section>
                 </div>
                 <div id="animation-fun">
                     <h3>Let's Animate</h3>
