added color and updated contact & about

--- a/csce242/projects/part3/about&contact.html
+++ b/csce242/projects/part3/about&contact.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contact Us - Gaming Overload</title>
+    <title>About & Contact - Gaming Overload</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about&contact.html">About & Contact</a></li>
             <li><a href="dashboard.html">User Dashboard</a></li>
         </ul>
     </nav>
 
-    <header>
-        <h1>Contact Us</h1>
-    </header>
+    <main class="two-column-container">
+        <section class="about-section">
+            <h2>About Us</h2>
+            <p>Gaming Overload is your one-stop shop for all things gaming! We provide a wide selection of video games, consoles, and accessories to gamers of all levels.</p>
+            <h3>Our Story</h3>
+            <p>Founded in 2025, Gaming Overload was created by passionate gamers who wanted to build a store that truly caters to the gaming community.</p>
+        </section>
 
-    <main>
         <section class="contact-content">
-            <h2>Get in Touch</h2>
+            <h2>Contact Us</h2>
             <p>Need help with an order or have a question? Our team is here for you!</p>
 
             <form>
