--- a/csce242/projects/part3/notifications.html
+++ b/csce242/projects/part3/notifications.html
@@ -8,10 +8,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about&contact.html">About & Contact</a></li>
             <li><a href="dashboard.html">User Dashboard</a></li>
         </ul>
     </nav>
