--- a/csce242/projects/part3/about&contact.html
+++ b/csce242/projects/part3/about&contact.html
@@ -21,6 +21,22 @@
             <p>Gaming Overload is your one-stop shop for all things gaming! We provide a wide selection of video games, consoles, and accessories to gamers of all levels.</p>
             <h3>Our Story</h3>
             <p>Founded in 2025, Gaming Overload was created by passionate gamers who wanted to build a store that truly caters to the gaming community.</p>
+            <h3>What We Offer</h3>
+            <ul>
+                <li>Latest Game Releases – From AAA titles to indie gems</li>
+                <li>Exclusive Deals & Promotions – Discounts, bundles, and pre-orders</li>
+                <li>High-Quality Accessories – Apparel, collectibles, posters, and gifts</li>
+                <li>Reliable Customer Support – Fast responses & hassle-free returns</li>
+            </ul>
+
+            <h3>Meet the Team</h3>
+            <p>Christian Durant – Founder & CEO</p>
+            <p>Alex Grey - Head of Customer Support</p>
+
+            <h3>Follow Us</h3>
+            <p>Instagram: @GamingOverload</p>
+            <p>Twitter: @GamingOverload</p>
+            <p>YouTube: GamingOverload</p>
         </section>
 
         <section class="contact-content">
