--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -30,7 +30,7 @@
         <section class="highlights">
             <div class="grid-container">
                 <a href="highlights.html">
-                <div class="grid-item"><img src="images/gameofthemonth.png" alt="Game of the Month"><figcaption>Image by<a href="https://image.api.playstation.com/vulcan/ap/rnd/202204/0521/AE2i8UIeHoeCre6lo47PnnfL.png"></a></figcaption><p>Game of the Month</p></div>
+                <div class="grid-item"><img src="images/gameofthemonth.png" alt="Game of the Month"><figcaption>Image by<a href="https://image.api.playstation.com/vulcan/ap/rnd/202204/0521/AE2i8UIeHoeCre6lo47PnnfL.png"></a></figcaption></figure><p>Game of the Month</p></div>
                 </a>
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Top-Selling Games"><p>Top-Selling Games</p></div>
                 <div class="grid-item"><img src="https://place-hold.it/200x200/ddd" alt="Upcoming Releases"><p>Upcoming Releases</p></div>
