--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -29,6 +29,7 @@
         <main>
         <section class="highlights">
             <div class="grid-container">
+                <figure>
                 <a href="highlights.html">
                 <div class="grid-item"><img src="images/gameofthemonth.png" alt="Game of the Month"><figcaption>Image by<a href="https://image.api.playstation.com/vulcan/ap/rnd/202204/0521/AE2i8UIeHoeCre6lo47PnnfL.png"></a></figcaption></figure><p>Game of the Month</p></div>
                 </a>
