--- a/csce242/assignments/assignment08/index.html
+++ b/csce242/assignments/assignment08/index.html
@@ -31,3 +31,6 @@
             <div id="heart" class="heart"></div>
         </div>
     </div>
+    <script src="script.js"></script>
+</body>
+</html>
