--- a/csce242/assignments/assignment08/index.html
+++ b/csce242/assignments/assignment08/index.html
@@ -28,7 +28,7 @@
         <button id="btn-green">Green</button>
         <button id="btn-blue">Blue</button>
         <div class="heart-box">
-            <div id="heart" class="heart"></div>
+            <span id="heart" class="heart">♥</span>
         </div>
     </div>
     <script src="script.js"></script>
