--- a/csce242/assignments/assignment08/index.html
+++ b/csce242/assignments/assignment08/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     </head>
+    <link rel="stylesheet" href="styles.css">
         <body>
             <h1>Assignment 8</h1>
             <h2 style="color: darkred;">If Statements</h2>
@@ -31,6 +32,5 @@
             <span id="heart" class="heart">♥</span>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
