edit color scheme

--- a/csce242/assignments/assignment08/index.html
+++ b/csce242/assignments/assignment08/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css">
         <body>
             <h1>Assignment 8</h1>
-            <h2 style="color: darkred;">If Statements</h2>
+            <h2 style="color: #0d47a1;">If Statements</h2>
             <div class="nav">
                 <span id="toggle-nav" class="nav-toggle">▼</span>
                 <div id="nav-items" class="nav-items">
