--- a/csce242/projects/part3/shop.html
+++ b/csce242/projects/part3/shop.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
         
-        <img src="https://place-hold.it/300x300/ddd" alt="Featured Game" class="featured-img">
+        <img src="/csce242/images/gameshop.png" alt="Featured Game" class="featured-img">
         
         <h2>Hot Games</h2>
         <div class="games-grid">
@@ -74,7 +74,7 @@
             </div>
 
             <div class="game-item">
-                <img src="https://place-hold.it/150x150/ddd" alt="Game">
+                <img src="/csce242/images/gamble.png" alt="Game">
                 <p><strong>Casino</strong></p>
                 <p>Gamble</p>
                 <p>Make lots of money</p>
@@ -82,23 +82,23 @@
             </div>
 
             <div class="game-item">
-                <img src="https://place-hold.it/150x150/ddd" alt="Game">
-                <p><strong>Sims</strong></p>
+                <img src="/csce242/images/sims.png" alt="Game">
+                <p><strong>Sims 4</strong></p>
                 <p>An open world action</p>
                 <p>Live your dreams</p>
                 <button class="buy-btn">Buy Now</button>
             </div>
 
             <div class="game-item">
-                <img src="https://place-hold.it/150x150/ddd" alt="Game">
-                <p><strong>Nascar</strong></p>
+                <img src="/csce242/images/nascar.png" alt="Game">
+                <p><strong>Nascar Heat 3</strong></p>
                 <p>An open world action</p>
                 <p>Become a racing champion</p>
                 <button class="buy-btn">Buy Now</button>
             </div>
 
             <div class="game-item">
-                <img src="https://place-hold.it/150x150/ddd" alt="Game">
+                <img src="/csce242/images/minecraft.png" alt="Game">
                 <p><strong>Minecraft</strong></p>
                 <p>Creative sandbox</p>
                 <p>Build your own world</p>
@@ -106,7 +106,7 @@
             </div>
 
             <div class="game-item">
-                <img src="https://place-hold.it/150x150/ddd" alt="Game">
+                <img src="/csce242/images/fortnitecover.png" alt="Game">
                 <p><strong>Fortnite</strong></p>
                 <p>Action pack</p>
                 <p>Join your friends in action</p>
@@ -117,8 +117,14 @@
     </main>
 </body>
 </html>
+<!--https://th.bing.com/th/id/OIP.YwK20X8_XASiPvJk1ZmsUgAAAA?rs=1&pid=ImgDetMain-->
 <!--https://image.api.playstation.com/vulcan/ap/rnd/202211/0711/kh4MUIuMmHlktOHar3lVl6rY.png-->
 <!--https://gamefaqs.gamespot.com/a/box/7/2/6/986726_front.jpg-->
 <!--https://th.bing.com/th/id/OIP.J73lWAjQJieXfS4ji05wXwHaNK?w=115&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
 <!--https://th.bing.com/th/id/OIP.yJirbyWKnLNEVvWDciCxPQAAAA?w=155&h=220&c=7&r=0&o=5&dpr=2&pid=1.7-->
 <!--https://th.bing.com/th/id/OIP.HGuBxCatUjcqZkOxEBb1RwHaHa?w=150&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://th.bing.com/th/id/OIP.XuuZ9U8X2G2ENh2t1380GwHaEK?w=318&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://th.bing.com/th/id/OIP.OTfX_Ps333yQWE_mIBqeiQHaHa?w=202&h=202&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://th.bing.com/th/id/OIP.QHz6W2Doi9G8obm02tytoAHaIp?w=154&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://th.bing.com/th/id/OIP.q3f8gyBPvNpIXNxDrrKJfgHaLH?w=121&h=182&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://th.bing.com/th/id/OIP.-d1p2Hl7wIaVAbXcnwAi8gHaHa?w=178&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
