--- a/csce242/04_js_intro/coding.html
+++ b/csce242/04_js_intro/coding.html
@@ -77,7 +77,19 @@
                     <div id="circle"></div>
                 </section>
                 <section>
-                    
+                    <h3 id="goal-display"></h3>
+                    <p>
+                        <label for="txt-donation">Enter Donation:</label>
+                    </p>
+                    <p>
+                        <input type="number" id="txt-donation">
+                        <button id="btn-add-donation">Add</button>
+                        <span id="donation-error" class="error hiee3n">* Invalid</span>
+                    </p>
+                    <div class="columns">
+                        <div id="thermometer"></div>
+                        <p id="donation-message">sdfawef</p>
+                    </div>
                 </section>
                 <section>
                     
