edited styles assign8

--- a/csce242/assignments/assignment08/index.html
+++ b/csce242/assignments/assignment08/index.html
@@ -18,7 +18,7 @@
         <p>Enter your mode of Transportation</p>
         <input type="text" id="transportInput" placeholder="Enter transport mode">
         <div class="image-box">
-            <img id="transportImage" src="" alt="" width="100">
+            <img id="transportImage" src="" alt="">
         </div>
     </div>
 
