edited styles assign8

--- a/csce242/assignments/assignment08/index.html
+++ b/csce242/assignments/assignment08/index.html
@@ -25,12 +25,15 @@
     <div id="picture" class="container hidden">
         <h2>Color My Heart</h2>
         <p>Click a button to change the heart color</p>
+        <div class="button-container">
         <button id="btn-red">Red</button>
         <button id="btn-green">Green</button>
         <button id="btn-blue">Blue</button>
+        </div>
         <div class="heart-box">
             <span id="heart" class="heart">♥</span>
         </div>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
