--- a/csce242/projects/part3/dashboard.html
+++ b/csce242/projects/part3/dashboard.html
@@ -28,7 +28,7 @@
         <section class="user-profiles">
             <h2>User Profiles</h2>
             <div class="profile-box">
-                <img src="https://place-hold.it/150x150/ddd" alt="Profile 1">
+                <img src="/csce242/projects/part3/images/john.png" alt="Profile 1">
                 <div class="profile-info">
                     <p>John Doe</p>
                     <p>Web Developer</p>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="profile-box">
-                <img src="https://place-hold.it/150x150/ddd" alt="Profile 2">
+                <img src="/csce242/projects/part3/images/jane.png" alt="Profile 2">
                 <div class="profile-info">
                     <p>Jane Smith</p>
                     <p>Graphic Designer</p>
@@ -49,7 +49,7 @@
         
         <section class="user-details">
             <h2>User Profile</h2>
-            <img src="https://place-hold.it/200x200/ddd" alt="User Profile">
+            <img src="/csce242/projects/part3/images/user.png" alt="User Profile">
             <p>Here are the detailed information of the user.</p>
             <a href="settings.html">
             <button class="edit-btn">Edit</button>
@@ -60,7 +60,7 @@
         <section class="friends-list">
             <h2>Friends</h2>
             <div class="friend-box">
-                <img src="https://place-hold.it/100x100/ddd" alt="Friend 1">
+                <img src="/csce242/projects/part3/images/friend1.png" alt="Friend 1">
                 <div class="friend-info">
                     <p>Mike Johnson</p>
                     <p>Data Analyst</p>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="friend-box">
-                <img src="https://place-hold.it/100x100/ddd" alt="Friend 2">
+                <img src="/csce242/projects/part3/images/friend2.png" alt="Friend 2">
                 <div class="friend-info">
                     <p>Emily Davis</p>
                     <p>Project Manager</p>
@@ -81,3 +81,8 @@
     </main>
 </body>
 </html>
+<!--https://th.bing.com/th/id/OIP._LD4BZXDIeGEgTdaTU0-dwHaEK?w=260&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://th.bing.com/th/id/OIP.c0VBB-lqMAzkkXGwoNuoMgAAAA?w=126&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://th.bing.com/th/id/OIP.sYBdeQnREOilbZ4_9ibSeAHaHa?w=173&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://th.bing.com/th/id/OIF.PQ9y6X1FytHUvvG5sh2sKQ?w=176&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
+<!--https://www.shutterstock.com/image-photo/portrait-streamer-african-young-woman-260nw-1893225928.jpg-->
