--- a/csce242/projects/part3/highlights.html
+++ b/csce242/projects/part3/highlights.html
@@ -18,7 +18,7 @@
         <main class="highlights-container">
             <h2>Disney Dreamlight Valley Highlights</h2>
             <div class="highlights-content">
-                <img src="https://place-hold.it/200x200/ddd" alt="Disney Dreamlight Valley" class="highlights-img">
+                <img src="/csce242/projects/part3/images/gameofthemonth.png" alt="Disney Dreamlight Valley" class="highlights-img">
                 <div class="highlights-text">
                     <p><strong>Fantasy World Blend</strong> - Disney Dreamlight Valley is an open-world, life-simulation game that blends iconic Disney and Pixar characters and settings into a magical realm.</p>
                     <br>
