--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -30,15 +30,15 @@
         <section class="highlights">
             <div class="grid-container">
                 <a href="highlights.html">
-                <div class="grid-item"><img src="/csce242/images/gameofthemonth.png" alt="Game of the Month"><p>Game of the Month</p></div>
+                <div class="grid-item"><img src="/csce242/projects/part3/images/gameofthemonth.png" alt="Game of the Month"><p>Game of the Month</p></div>
                 </a>
-                <div class="grid-item"><img src="/csce242/images/topsell.png" alt="Top-Selling Games"><p>Top-Selling Games</p></div>
-                <div class="grid-item"><img src="/csce242/images/upcominggames.png" alt="Upcoming Releases"><p>Upcoming Releases</p></div>
-                <div class="grid-item"><img src="/csce242/images/exclusives.png" alt="Exclusive Editions"><p>Exclusive Editions</p></div>
-                <div class="grid-item"><img src="/csce242/images/gamedeveloper.png" alt="Developer Spotlights"><p>Developer Spotlights</p></div>
-                <div class="grid-item"><img src="/csce242/images/competitive.png" alt="Competitive Gaming"><p>Competitive Gaming</p></div>
-                <div class="grid-item"><img src="/csce242/images/patches.png" alt="Game Updates & Patches"><p>Game Updates & Patches</p></div>
-                <div class="grid-item"><img src="/csce242/images/accessories.png" alt="Must Have Accessories"><p>Must Have Accessories</p></div>
+                <div class="grid-item"><img src="/csce242/projects/part3/images/topsell.png" alt="Top-Selling Games"><p>Top-Selling Games</p></div>
+                <div class="grid-item"><img src="/csce242/projects/part3/images/upcominggames.png" alt="Upcoming Releases"><p>Upcoming Releases</p></div>
+                <div class="grid-item"><img src="/csce242/projects/part3/images/exclusives.png" alt="Exclusive Editions"><p>Exclusive Editions</p></div>
+                <div class="grid-item"><img src="/csce242/projects/part3/images/gamedeveloper.png" alt="Developer Spotlights"><p>Developer Spotlights</p></div>
+                <div class="grid-item"><img src="/csce242/projects/part3/images/competitive.png" alt="Competitive Gaming"><p>Competitive Gaming</p></div>
+                <div class="grid-item"><img src="/csce242/projects/part3/images/patches.png" alt="Game Updates & Patches"><p>Game Updates & Patches</p></div>
+                <div class="grid-item"><img src="/csce242/projects/part3/images/accessories.png" alt="Must Have Accessories"><p>Must Have Accessories</p></div>
             </div>
         </section>
     </main>
