--- a/csce242/projects/part3/settings.html
+++ b/csce242/projects/part3/settings.html
@@ -26,7 +26,7 @@
     <main class="settings-container">
         <h2>Settings</h2>
         <div class="profile-picture">
-            <img src="https://place-hold.it/150x150/ddd" alt="Profile Picture">
+            <img src="/csce242/projects/part3/images/user.png" alt="Profile Picture">
             <button class="update-photo-btn">Update Photo</button>
         </div>
         
