--- a/csce242/projects/part3/order.html
+++ b/csce242/projects/part3/order.html
@@ -16,7 +16,7 @@
     </nav>
     <main class="order-container">
         <h2>Order Successfully Placed</h2>
-        <img src="https://place-hold.it/200x200/ddd" alt="Order Confirmation" class="order-img">
+        <img src="/csce242/projects/part3/images/witcher3.png" alt="Order Confirmation" class="order-img">
         <h3>The Witcher 3</h3>
         <p>Thank you for your order! Your order has been processed successfully.</p>
         <p>You will receive a confirmation email shortly.</p>
