added toggle to website

--- a/csce242/projects/part3/about&contact.html
+++ b/csce242/projects/part3/about&contact.html
@@ -96,6 +96,7 @@
             </ul>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
 <!--https://th.bing.com/th/id/OIP.3MME1ArJT1XzmGgmmASlogHaHa?w=159&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
