--- a/csce242/projects/part3/activity.html
+++ b/csce242/projects/part3/activity.html
@@ -67,5 +67,6 @@
             <button class="view-btn">View Details</button>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
