--- a/csce242/projects/part3/dashboard.html
+++ b/csce242/projects/part3/dashboard.html
@@ -84,6 +84,7 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
 <!--https://th.bing.com/th/id/OIP._LD4BZXDIeGEgTdaTU0-dwHaEK?w=260&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
