--- a/csce242/projects/part3/gamereview.html
+++ b/csce242/projects/part3/gamereview.html
@@ -35,5 +35,6 @@
             <p><strong>Rate this game (1-5, 5 being the best):</strong> 5</p>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
