--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -47,6 +47,7 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
 <!--https://image.api.playstation.com/vulcan/ap/rnd/202204/0521/AE2i8UIeHoeCre6lo47PnnfL.png-->
