--- a/csce242/projects/part3/order.html
+++ b/csce242/projects/part3/order.html
@@ -26,5 +26,6 @@
         <p>Thank you for your order! Your order has been processed successfully.</p>
         <p>You will receive a confirmation email shortly.</p>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
