--- a/csce242/projects/part3/reviews.html
+++ b/csce242/projects/part3/reviews.html
@@ -61,6 +61,7 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
 <!--https://th.bing.com/th/id/OIP.VuiE5FTU5oGpkPFpB219MAHaJP?w=202&h=253&c=7&r=0&o=5&dpr=2&pid=1.7-->
