--- a/csce242/projects/part3/shop.html
+++ b/csce242/projects/part3/shop.html
@@ -120,6 +120,7 @@
             
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
 <!--https://th.bing.com/th/id/OIP.YwK20X8_XASiPvJk1ZmsUgAAAA?rs=1&pid=ImgDetMain-->
