--- a/csce242/projects/part3/notifications.html
+++ b/csce242/projects/part3/notifications.html
@@ -88,6 +88,7 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
 <!--https://th.bing.com/th?q=Message+Icon+PNG+Black+and+White&w=120&h=120&c=1&rs=1&qlt=90&cb=1&dpr=2&pid=InlineBlock&mkt=en-US&cc=US&setlang=en&adlt=strict&t=1&mw=247-->
