--- a/csce242/projects/part3/received.html
+++ b/csce242/projects/part3/received.html
@@ -23,5 +23,6 @@
         <h2>Message Received</h2>
         <img src="https://place-hold.it/200x200/ddd" alt="Message Confirmation" class="order-img">
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
