--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -11,7 +11,7 @@
             <div></div>
             <div></div>
         </div>
-        <ul id="nav-items" class="hidden">
+        <ul id="nav-items">
             <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
