added reference to image

--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -34,9 +34,8 @@
         <main>
         <section class="highlights">
             <div class="grid-container">
-                <a href="highlights.html">
-                <div class="grid-item"><img src="/csce242/projects/part3/images/gameofthemonth.png" alt="Game of the Month"><p>Game of the Month</p></div>
-                </a>
+                <a href="https://image.api.playstation.com/vulcan/ap/rnd/202204/0521/AE2i8UIeHoeCre6lo47PnnfL.png">
+                <div class="grid-item"><img src="/csce242/projects/part3/images/gameofthemonth.png" alt="Game of the Month"></a><a href="highlights.html"><p>Game of the Month</p></a></div>
                 <div class="grid-item"><img src="/csce242/projects/part3/images/topsell.png" alt="Top-Selling Games"><p>Top-Selling Games</p></div>
                 <div class="grid-item"><img src="/csce242/projects/part3/images/upcominggames.png" alt="Upcoming Releases"><p>Upcoming Releases</p></div>
                 <div class="grid-item"><img src="/csce242/projects/part3/images/exclusives.png" alt="Exclusive Editions"><p>Exclusive Editions</p></div>
