added reference to image

--- a/csce242/projects/part3/dashboard.html
+++ b/csce242/projects/part3/dashboard.html
@@ -33,7 +33,8 @@
         <section class="user-profiles">
             <h2>User Profiles</h2>
             <div class="profile-box">
-                <img src="/csce242/projects/part3/images/john.png" alt="Profile 1">
+                <a href="https://th.bing.com/th/id/OIP._LD4BZXDIeGEgTdaTU0-dwHaEK?w=260&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part3/images/john.png" alt="Profile 1"></a>
                 <div class="profile-info">
                     <p>John Doe</p>
                     <p>Web Developer</p>
@@ -42,7 +43,8 @@
                 </div>
             </div>
             <div class="profile-box">
-                <img src="/csce242/projects/part3/images/jane.png" alt="Profile 2">
+                <a href="https://th.bing.com/th/id/OIP.c0VBB-lqMAzkkXGwoNuoMgAAAA?w=126&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part3/images/jane.png" alt="Profile 2"></a>
                 <div class="profile-info">
                     <p>Jane Smith</p>
                     <p>Graphic Designer</p>
@@ -54,7 +56,8 @@
         
         <section class="user-details">
             <h2>User Profile</h2>
-            <img src="/csce242/projects/part3/images/user.png" alt="User Profile">
+            <a href="https://th.bing.com/th/id/OIP.sYBdeQnREOilbZ4_9ibSeAHaHa?w=173&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+            <img src="/csce242/projects/part3/images/user.png" alt="User Profile"></a>
             <p>Here are the detailed information of the user.</p>
             <a href="settings.html">
             <button class="edit-btn">Edit</button>
@@ -65,7 +68,8 @@
         <section class="friends-list">
             <h2>Friends</h2>
             <div class="friend-box">
-                <img src="/csce242/projects/part3/images/friend1.png" alt="Friend 1">
+                <a href="https://th.bing.com/th/id/OIF.PQ9y6X1FytHUvvG5sh2sKQ?w=176&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part3/images/friend1.png" alt="Friend 1"></a>
                 <div class="friend-info">
                     <p>Mike Johnson</p>
                     <p>Data Analyst</p>
@@ -74,7 +78,8 @@
                 </div>
             </div>
             <div class="friend-box">
-                <img src="/csce242/projects/part3/images/friend2.png" alt="Friend 2">
+                <a href="https://www.shutterstock.com/image-photo/portrait-streamer-african-young-woman-260nw-1893225928.jpg">
+                <img src="/csce242/projects/part3/images/friend2.png" alt="Friend 2"></a>
                 <div class="friend-info">
                     <p>Emily Davis</p>
                     <p>Project Manager</p>
