--- a/csce242/projects/part3/order.html
+++ b/csce242/projects/part3/order.html
@@ -21,7 +21,8 @@
     </nav>
     <main class="order-container">
         <h2>Order Successfully Placed</h2>
-        <img src="/csce242/projects/part3/images/witcher3.png" alt="Order Confirmation" class="order-img">
+        <a href="https://image.api.playstation.com/vulcan/ap/rnd/202211/0711/kh4MUIuMmHlktOHar3lVl6rY.png">
+        <img src="/csce242/projects/part3/images/witcher3.png" alt="Order Confirmation" class="order-img"></a>
         <h3>The Witcher 3</h3>
         <p>Thank you for your order! Your order has been processed successfully.</p>
         <p>You will receive a confirmation email shortly.</p>
