--- a/csce242/projects/part3/about&contact.html
+++ b/csce242/projects/part3/about&contact.html
@@ -83,7 +83,8 @@
             <p>Phone support: +1 (800) 123-GAMING (Monday–Friday, 9am – 6pm EST)</p>
             <p>Email: support@gamingoverload.com</p>
             <p>Live chat: Available on our website from 9am – 9pm EST</p>
-            <img src="/csce242/projects/part3/images/storelogo.png" alt="store logo">
+            <a href="https://th.bing.com/th/id/OIP.3MME1ArJT1XzmGgmmASlogHaHa?w=159&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+            <img src="/csce242/projects/part3/images/storelogo.png" alt="store logo"></a>
         </section>
 
         <section class="faq">
