--- a/csce242/projects/part3/highlights.html
+++ b/csce242/projects/part3/highlights.html
@@ -23,7 +23,8 @@
         <main class="highlights-container">
             <h2>Disney Dreamlight Valley Highlights</h2>
             <div class="highlights-content">
-                <img src="/csce242/projects/part3/images/gameofthemonth.png" alt="Disney Dreamlight Valley" class="highlights-img">
+                <a href="https://image.api.playstation.com/vulcan/ap/rnd/202204/0521/AE2i8UIeHoeCre6lo47PnnfL.png">
+                <img src="/csce242/projects/part3/images/gameofthemonth.png" alt="Disney Dreamlight Valley" class="highlights-img"></a>
                 <div class="highlights-text">
                     <p><strong>Fantasy World Blend</strong> - Disney Dreamlight Valley is an open-world, life-simulation game that blends iconic Disney and Pixar characters and settings into a magical realm.</p>
                     <br>
