--- a/csce242/projects/part3/reviews.html
+++ b/csce242/projects/part3/reviews.html
@@ -42,19 +42,22 @@
         <section class="game-reviews">
             <h2>Latest Game Reviews</h2>
             <div class="review">
-                <img src="/csce242/projects/part3/images/witcher3.png" alt="The Witcher 3">
+                <a href="https://image.api.playstation.com/vulcan/ap/rnd/202211/0711/kh4MUIuMmHlktOHar3lVl6rY.png">
+                <img src="/csce242/projects/part3/images/witcher3.png" alt="The Witcher 3"></a>
                 <h3>The Witcher 3</h3>
                 <p>An epic fantasy role-playing game with a rich storyline and immersive gameplay.</p>
                 <a href="gamereview.html">Read More</a>
             </div>
             <div class="review">
-                <img src="/csce242/projects/part3/images/callofduty.png" alt="Call Of Duty">
+                <a href="https://th.bing.com/th/id/OIP.VuiE5FTU5oGpkPFpB219MAHaJP?w=202&h=253&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part3/images/callofduty.png" alt="Call Of Duty"></a>
                 <h3>Call of Duty</h3>
                 <p>A fast-paced first-person shooter that offers thrilling multiplayer experiences.</p>
                 <a href="#">Read More</a>
             </div>
             <div class="review">
-                <img src="/csce242/projects/part3/images/portal2.png" alt="Portal 2">
+                <a href="https://th.bing.com/th/id/OIP.4TnaxXC6nGhzKiqy8ddkzgHaHa?w=178&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part3/images/portal2.png" alt="Portal 2"></a>
                 <h3>Portal 2</h3>
                 <p>A mind-bending puzzle game that challenges your problem-solving abilities with humor.</p>
                 <a href="#">Read More</a>
