--- a/csce242/projects/part3/about&contact.html
+++ b/csce242/projects/part3/about&contact.html
@@ -48,7 +48,7 @@
             <h2>Contact Us</h2>
             <p>Need help with an order or have a question? Our team is here for you!</p>
 
-            <form>
+            <form action="received.html" method="GET">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
 
@@ -71,9 +71,7 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
 
-                <a href="received.html">
                 <button type="submit">Send</button>
-                </a>
                 <button type="reset">Cancel</button>
             </form>
         </section>
