added img reference

--- a/csce242/projects/part3/settings.html
+++ b/csce242/projects/part3/settings.html
@@ -31,7 +31,8 @@
     <main class="settings-container">
         <h2>Settings</h2>
         <div class="profile-picture">
-            <img src="/csce242/projects/part3/images/user.png" alt="Profile Picture">
+            <a href="https://th.bing.com/th/id/OIP.sYBdeQnREOilbZ4_9ibSeAHaHa?w=173&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+            <img src="/csce242/projects/part3/images/user.png" alt="Profile Picture"></a>
             <button class="update-photo-btn">Update Photo</button>
         </div>
         
