--- a/csce242/projects/part3/received.html
+++ b/csce242/projects/part3/received.html
@@ -21,7 +21,8 @@
     </nav>
     <main class="order-container">
         <h2>Message Received</h2>
-        <img src="https://place-hold.it/200x200/ddd" alt="Message Confirmation" class="order-img">
+        <a href="https://th.bing.com/th/id/R.243b6b0bf03c5f8ca4d6812ac7cb9616?rik=cHbjD0s9XWNEhw&riu=http%3a%2f%2fclipart-library.com%2fnew_gallery%2f113-1134506_computer-icons-email-bounce-address-letter-image-file.png&ehk=A0bGxsYsR%2foKnpPUsgro%2fs7%2bRSoOJiF%2b1n5%2bdLXZlmg%3d&risl=&pid=ImgRaw&r=0">
+        <img src="/csce242/projects/part3/images/email.png" alt="Message Confirmation" class="order-img"></a>
     </main>
     <script src="script.js"></script>
 </body>
