reverted code and edited main page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -41,6 +41,14 @@
         </div>
       </section>
 
+      <div class="assignment">
+        <a href="https://durantchristian.github.io/csce242/assignments/assignment08/index.html">
+        <h3>Assignment 8 - Java Script: Conditionals</h3>
+          <img src="images/assignment08SS.png" alt="Assignment 8 Preview">
+      </a>
+      </div>
+    </section>
+
         <h2 id="projects-heading">Projects</h2>
         <section class="projects">
           <div class="project">
@@ -61,6 +69,13 @@
             <a href="https://durantchristian.github.io/csce242/projects/part3/index.html">
             <h3>Project 1 part 3 - Projects Website</h3>
               <img src="images/projectpart3SS.png" alt="Project part 3 Preview">
+          </a>
+          </div>
+
+          <div class="project">
+            <a href="https://durantchristian.github.io/csce242/projects/part3/index.html">
+            <h3>Project 1 part 4 - Projects: Colors, Pictures, and Text</h3>
+              <img src="images/projectpart4SS.png" alt="Project part 4 Preview">
           </a>
           </div>
           
