--- a/csce242/projects/part3/contact.html
+++ b/csce242/projects/part3/contact.html
@@ -1,54 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About & Contact - Gaming Overload</title>
+    <title>Contact Us - Gaming Overload</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <div id="toggle-nav">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <ul id="nav-items" class="hidden">
+        <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
-            <li><a href="about&contact.html">About & Contact</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="dashboard.html">User Dashboard</a></li>
         </ul>
     </nav>
 
-    <main class="two-column-container">
-        <section class="about-section">
-            <h2>About Us</h2>
-            <p>Gaming Overload is your one-stop shop for all things gaming! We provide a wide selection of video games, consoles, and accessories to gamers of all levels.</p>
-            <h3>Our Story</h3>
-            <p>Founded in 2025, Gaming Overload was created by passionate gamers who wanted to build a store that truly caters to the gaming community.</p>
-            <h3>What We Offer</h3>
-            <ul>
-                <li>Latest Game Releases – From AAA titles to indie gems</li>
-                <li>Exclusive Deals & Promotions – Discounts, bundles, and pre-orders</li>
-                <li>High-Quality Accessories – Apparel, collectibles, posters, and gifts</li>
-                <li>Reliable Customer Support – Fast responses & hassle-free returns</li>
-            </ul>
+    <header>
+        <h1>Contact Us</h1>
+    </header>
 
-            <h3>Meet the Team</h3>
-            <p>Christian Durant – Founder & CEO</p>
-            <p>Alex Grey - Head of Customer Support</p>
-
-            <h3>Follow Us</h3>
-            <p>Instagram: @GamingOverload</p>
-            <p>Twitter: @GamingOverload</p>
-            <p>YouTube: GamingOverload</p>
-        </section>
-
+    <main>
         <section class="contact-content">
-            <h2>Contact Us</h2>
+            <h2>Get in Touch</h2>
             <p>Need help with an order or have a question? Our team is here for you!</p>
 
-            <form action="received.html" method="GET">
+            <form>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
 
@@ -71,7 +48,9 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
 
+                <a href="received.html">
                 <button type="submit">Send</button>
+                </a>
                 <button type="reset">Cancel</button>
             </form>
         </section>
@@ -81,8 +60,6 @@
             <p>Phone support: +1 (800) 123-GAMING (Monday–Friday, 9am – 6pm EST)</p>
             <p>Email: support@gamingoverload.com</p>
             <p>Live chat: Available on our website from 9am – 9pm EST</p>
-            <a href="https://th.bing.com/th/id/OIP.3MME1ArJT1XzmGgmmASlogHaHa?w=159&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
-            <img src="/csce242/projects/part3/images/storelogo.png" alt="store logo"></a>
         </section>
 
         <section class="faq">
@@ -95,7 +72,5 @@
             </ul>
         </section>
     </main>
-    <script src="script.js"></script>
 </body>
 </html>
-<!--https://th.bing.com/th/id/OIP.3MME1ArJT1XzmGgmmASlogHaHa?w=159&h=180&c=7&r=0&o=5&dpr=2&pid=1.7-->
