--- a/csce242/projects/part4/gamereview.html
+++ b/csce242/projects/part4/gamereview.html
@@ -6,12 +6,16 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <div id="toggle-nav">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <ul id="nav-items" class="hidden">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about&contact.html">About & Contact</a></li>
             <li><a href="dashboard.html">User Dashboard</a></li>
         </ul>
     </nav>
@@ -31,5 +35,6 @@
             <p><strong>Rate this game (1-5, 5 being the best):</strong> 5</p>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
