--- a/csce242/projects/part3/received.html
+++ b/csce242/projects/part3/received.html
@@ -6,24 +6,18 @@
 </head>
 <body>
     <nav>
-        <div id="toggle-nav">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <ul id="nav-items" class="hidden">
+        <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
-            <li><a href="about&contact.html">About & Contact</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="dashboard.html">User Dashboard</a></li>
         </ul>
     </nav>
     <main class="order-container">
         <h2>Message Received</h2>
-        <a href="https://th.bing.com/th/id/R.243b6b0bf03c5f8ca4d6812ac7cb9616?rik=cHbjD0s9XWNEhw&riu=http%3a%2f%2fclipart-library.com%2fnew_gallery%2f113-1134506_computer-icons-email-bounce-address-letter-image-file.png&ehk=A0bGxsYsR%2foKnpPUsgro%2fs7%2bRSoOJiF%2b1n5%2bdLXZlmg%3d&risl=&pid=ImgRaw&r=0">
-        <img src="/csce242/projects/part3/images/email.png" alt="Message Confirmation" class="order-img"></a>
+        <img src="https://place-hold.it/200x200/ddd" alt="Message Confirmation" class="order-img">
     </main>
-    <script src="script.js"></script>
 </body>
 </html>
