--- a/csce242/projects/part4/highlights.html
+++ b/csce242/projects/part4/highlights.html
@@ -6,12 +6,16 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <div id="toggle-nav">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <ul id="nav-items" class="hidden">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about&contact.html">About & Contact</a></li>
             <li><a href="dashboard.html">User Dashboard</a></li>
         </ul>
     </nav>
@@ -19,7 +23,8 @@
         <main class="highlights-container">
             <h2>Disney Dreamlight Valley Highlights</h2>
             <div class="highlights-content">
-                <img src="https://place-hold.it/200x200/ddd" alt="Disney Dreamlight Valley" class="highlights-img">
+                <a href="https://image.api.playstation.com/vulcan/ap/rnd/202204/0521/AE2i8UIeHoeCre6lo47PnnfL.png">
+                <img src="/csce242/projects/part4/images/gameofthemonth.png" alt="Disney Dreamlight Valley" class="highlights-img"></a>
                 <div class="highlights-text">
                     <p><strong>Fantasy World Blend</strong> - Disney Dreamlight Valley is an open-world, life-simulation game that blends iconic Disney and Pixar characters and settings into a magical realm.</p>
                     <br>
@@ -35,5 +40,6 @@
                 </div>
             </div>
         </main>
+        <script src="script.js"></script>
     </body>
     </html>
