--- a/csce242/projects/part4/order.html
+++ b/csce242/projects/part4/order.html
@@ -6,21 +6,27 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <div id="toggle-nav">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <ul id="nav-items" class="hidden">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about&contact.html">About & Contact</a></li>
             <li><a href="dashboard.html">User Dashboard</a></li>
         </ul>
     </nav>
     <main class="order-container">
         <h2>Order Successfully Placed</h2>
-        <img src="https://place-hold.it/200x200/ddd" alt="Order Confirmation" class="order-img">
+        <a href="https://image.api.playstation.com/vulcan/ap/rnd/202211/0711/kh4MUIuMmHlktOHar3lVl6rY.png">
+        <img src="/csce242/projects/part4/images/witcher3.png" alt="Order Confirmation" class="order-img"></a>
         <h3>The Witcher 3</h3>
         <p>Thank you for your order! Your order has been processed successfully.</p>
         <p>You will receive a confirmation email shortly.</p>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
