--- a/csce242/projects/part4/settings.html
+++ b/csce242/projects/part4/settings.html
@@ -6,12 +6,16 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <div id="toggle-nav">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <ul id="nav-items" class="hidden">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="reviews.html">Game Reviews</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about&contact.html">About & Contact</a></li>
             <li><a href="dashboard.html">User Dashboard</a></li>
         </ul>
     </nav>
@@ -27,7 +31,8 @@
     <main class="settings-container">
         <h2>Settings</h2>
         <div class="profile-picture">
-            <img src="https://place-hold.it/150x150/ddd" alt="Profile Picture">
+            <a href="https://th.bing.com/th/id/OIP.sYBdeQnREOilbZ4_9ibSeAHaHa?w=173&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+            <img src="/csce242/projects/part4/images/user.png" alt="Profile Picture"></a>
             <button class="update-photo-btn">Update Photo</button>
         </div>
         
@@ -60,5 +65,6 @@
             </div>
         </form>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
