--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -10,7 +10,7 @@
     <button id="drawStairs">Draw Stairs</button>
     <div id="container"></div>
     <button id="climbStairs" style="display:none;">Climb Stairs</button>
-    <img id="stickFigure" src="left.png" style="display:none; width: 50px;" />
+    <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" style="display:none; width: 50px;" />
     <script src="script.js"></script>
 </body>
 </html>
