--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -7,10 +7,10 @@
     <body>
         <h2>Assignment 9</h2>
     <h3>For Loops</h3>
-    <button id="drawStairs">Draw Stairs</button>
+    <button id="drawLadder">Draw Stairs</button>
     <p>@durantchristian.com</p>
     <div id="container"></div>
-    <button id="climbStairs" style="display:none;">Climb Stairs</button>
+    <button id="climbLadder" style="display:none;">Climb Stairs</button>
     <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" style="display:none; width: 50px;" />
     <script src="script.js"></script>
 </body>
