--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -8,10 +8,13 @@
         <h2>Assignment 9</h2>
     <h3>For Loops</h3>
     <button id="drawLadder">Draw Stairs</button>
-    <p>@durantchristian.com</p>
-    <div id="container"></div>
-    <button id="climbLadder" style="display:none;">Climb Stairs</button>
-    <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" style="display:none; width: 50px;" />
+    <p id="author">@durantchristian.com</p>
+    <div id="container">
+        <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" style="display:none; width: 50px;" />
+    </div>
+    <div id="controls">
+        <button id="climbLadder" style="display:none;">Climb Stairs</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
