--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -9,11 +9,10 @@
     <h3>For Loops</h3>
     <button id="drawLadder">Draw Stairs</button>
     <p id="author">@durantchristian.com</p>
-    <div id="container">
-        <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" style="display:none; width: 50px;" />
-    </div>
-    <div id="controls">
-        <button id="climbLadder" style="display:none;">Climb Stairs</button>
+    <div id="container"></div>
+    <div id="controls" style="display: none;">
+        <button id="climbLadder">Climb Stairs</button>
+        <p id="authorMove">@durantchristian.com</p>
     </div>
     <script src="script.js"></script>
 </body>
