--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -7,13 +7,11 @@
     <body>
         <h2>Assignment 9</h2>
     <h3>For Loops</h3>
-    <button id="drawLadder">Draw Stairs</button>
-    <p id="author">@durantchristian.com</p>
+    <button id="drawStairs">Draw Stairs</button>
+    <p>@durantchristian.com</p>
     <div id="container"></div>
-    <div id="controls" style="display: none;">
-        <button id="climbLadder">Climb Stairs</button>
-        <p id="authorMove">@durantchristian.com</p>
-    </div>
+    <button id="climbStairs" style="display:none;">Climb Stairs</button>
+    <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" style="display:none; width: 50px;" />
     <script src="script.js"></script>
 </body>
 </html>
