--- a/csce242/assignments/assignment10/index.html
+++ b/csce242/assignments/assignment10/index.html
@@ -14,3 +14,6 @@
             <img id="popupImage" src="" alt="">
         </div>
         <p class="attribution"><span>Image by</span> <span class="underline">Freepik</span></p>
+        <script src="script.js"></script>
+</body>
+</html>
