--- a/csce242/assignments/assignment10/index.html
+++ b/csce242/assignments/assignment10/index.html
@@ -13,7 +13,14 @@
             <h3 id="popupTitle"></h3>
             <img id="popupImage" src="" alt="">
         </div>
-        <p class="attribution"><span>Image by</span> <span class="underline">Freepik</span></p>
+        <section>
+            <p class="attribution">
+                <span>Image by</span> 
+                <a href="https://www.freepik.com/free-vector/hand-drawn-stickman-collection_20832062.htm#query=stick%20figure%20run&position=46&from_view=search&track=ais&uuid=22e87991-ee06-4dc2-8ea3-464d535e1a63" 
+                   class="underline" 
+                   style="text-decoration: underline;">Freepik</a>
+            </p>
+        </section>
         <script src="script.js"></script>
 </body>
 </html>
