pushed assignment10 to main

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -45,6 +45,13 @@
               <img src="images/assignment08SS.png" alt="Assignment 8 Preview">
           </a>
           </div>
+
+          <div class="assignment">
+            <a href="https://durantchristian.github.io/csce242/assignments/assignment10/index.html">
+            <h3>Assignment 10 - Java Script: Arrays</h3>
+              <img src="images/assignment10SS.png" alt="Assignment 10 Preview">
+          </a>
+          </div>
         </section>
 
         <h2 id="projects-heading">Projects</h2>
