--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -9,9 +9,11 @@
     <h3>For Loops</h3>
     <button id="drawStairs">Draw Stairs</button>
     <p>@durantchristian.com</p> 
-    <div id="container"></div>
+    <div id="container">
+        <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" alt="Stick Figure" style="display:none; width: 50px;">
+    </div>
     <button id="climbStairs" style="display:none;">Climb Stairs</button>
-    <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" style="display:none; width: 50px;" />
+    <p id="author">@durantchristian.com</p>
     <script src="script.js"></script>
 </body>
 </html>
