--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -8,10 +8,8 @@
         <h2>Assignment 9</h2>
     <h3>For Loops</h3>
     <button id="drawStairs">Draw Stairs</button>
-    <p>@durantchristian.com</p> 
-    <div id="container">
-        <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" alt="Stick Figure" style="display:none; width: 50px;">
-    </div>
+    <div id="container"></div>
+    <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" alt="Stick Figure" style="display:none; width: 50px;">
     <button id="climbStairs" style="display:none;">Climb Stairs</button>
     <p id="author">@durantchristian.com</p>
     <script src="script.js"></script>
