--- a/csce242/04_js_intro/loops.html
+++ b/csce242/04_js_intro/loops.html
@@ -47,10 +47,20 @@
 
                 </section>
                 <section>
-                    
+                    <h3>Counting</h3>
+                    <button id="btn-count">Start</button>
+                    <p id="count-display"></p>
                 </section>
                 <section>
-                    
+                    <h3>Toys!!!</h3>
+                    <button id="btn-show-toys">Start</button>
+                    <section id="display-toys"></section>
+                </section>
+                <section>
+                    <h3>Toys and Descriptions</h3>
+                    <button id="btn-show-toy-desc">Show Toys and Descriptions</button>
+                    <section id="display-toy-descs"></section>
+                    <p id="toy-message"></p>
                 </section>
             </main>
             <footer>
